# sapphire-old-c-version

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
include/: CMakeLists.txt  compiler-status.h  het-array.h  sapphire-io.h  sapphire-mem.h  sapphire-str.h  sapphire_items.h  test-tools.h
src/: CMakeLists.txt
src/tests/: CMakeLists.txt
utils/: CMakeLists.txt  sapphire-io.c
utils/tests/: CMakeLists.txt  test_sapphireio.c  test_sapphiremem.c
